--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "ethers": "^5.6.0",
     "hardhat": "^2.9.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "husky": "^7.0.4",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.7",
